<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.sf.eclipsecs</groupId>
    <artifactId>net.sf.eclipsecs.parent</artifactId>
    <version>8.32.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>eclipse-cs Maven Parent</name>

    <modules>
        <module>net.sf.eclipsecs.target</module>
        <module>net.sf.eclipsecs.branding</module>
        <module>net.sf.eclipsecs.checkstyle</module>
        <module>net.sf.eclipsecs.core</module>
        <module>net.sf.eclipsecs.doc</module>
        <module>net.sf.eclipsecs.sample</module>
        <module>net.sf.eclipsecs.ui</module>
        <module>net.sf.eclipsecs-feature</module>
        <module>net.sf.eclipsecs-updatesite</module>
    </modules>

    <properties>
        <tycho-version>1.6.0</tycho-version>
        <tycho.scmUrl>scm:git:git://github.com:checkstyle/eclipse-cs.git</tycho.scmUrl>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <connection>scm:git:git://github.com:checkstyle/eclipse-cs.git</connection>
        <developerConnection>scm:git:git@github.com:checkstyle/eclipse-cs.git</developerConnection>
    </scm>

    <issueManagement>
        <url>https://github.com/checkstyle/eclipse-cs/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <licenses>
        <license>
            <name>GNU Lesser General Public License version 2.1</name>
            <url>https://opensource.org/licenses/LGPL-2.1</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
        <testSourceDirectory>test</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>test</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>net.sf.eclipsecs</groupId>
                            <artifactId>net.sf.eclipsecs.target</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>
                    <resolver>p2</resolver>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.eclipse.tycho.extras</groupId>
                            <artifactId>tycho-buildtimestamp-jgit</artifactId>
                            <version>${tycho-version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.eclipse.tycho.extras</groupId>
                            <artifactId>tycho-sourceref-jgit</artifactId>
                            <version>${tycho-version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <!-- <timestampProvider>jgit</timestampProvider> -->
                        <jgit.ignore>
                            pom.xml
                        </jgit.ignore>
                        <jgit.dirtyWorkingTree>ignore</jgit.dirtyWorkingTree>
                        <sourceReferences>
                            <generate>true</generate>
                        </sourceReferences>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <!-- <baselineRepositories> -->
                        <!-- <repository> -->
                        <!-- <url>git://git.code.sf.net/p/eclipse-cs/git</url> -->
                        <!-- </repository> -->
                        <!-- </baselineRepositories> -->
                    </configuration>
                    <executions>
                        <execution>
                            <id>attached-p2-metadata</id>
                            <phase>package</phase>
                            <goals>
                                <goal>p2-metadata</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-versions-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-source-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <strictSrcIncludes>false</strictSrcIncludes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>plugin-source</id>
                            <goals>
                                <goal>plugin-source</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-source-feature-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>com.carrotgarden.maven</groupId>
                    <artifactId>bintray-maven-plugin</artifactId>
                    <version>1.3.20180612164212</version>
                </plugin>
                <!-- Disable default deployer. -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                    <executions>
                        <execution>
                            <id>test</id>
                            <phase>test</phase>
                            <configuration>
                                <includes>
                                    <include>**/*Test.java</include>
                                </includes>
                            </configuration>
                            <goals>
                                <goal>test</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <executions>
                        <execution>
                            <id>compiletests</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <executions>
                        <execution>
                            <id>enforce-maven</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireMavenVersion>
                                        <version>3.6.3</version>
                                    </requireMavenVersion>
                                    <requireReleaseDeps/>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
